--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://dl.bintray.com/dynamitechetan/maven'
+        }
     }
 }
