--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile project(':FogViewLibrary')
+//    compile project(':FogViewLibrary')
+//    compile 'https://dl.bintray.com/dynamitechetan/maven'
+    compile 'com.dynamitechetan.fogviewlibrary:FogViewLibrary:1.0.0'
 }
